--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
       </div>
     </div>
 
+    <div id="footer">
+      <p>
+        &copy; <span id="year"></span>
+        Built by
+        <a class="footer-link" href="https://github.com/G-Hensley" target="_blank">G-Hensley.</a>
+      </p>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
