Change github link to portfolio

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <p>
         &copy; <span id="year"></span>
         Built by
-        <a class="footer-link" href="https://github.com/G-Hensley" target="_blank">G-Hensley.</a>
+        <a class="footer-link" href="https://gavinhensley.dev" target="_blank">Gavin Hensley.</a>
       </p>
     </div>
 
